--- a/style/_about.scss
+++ b/style/_about.scss
@@ -1,6 +1,83 @@
 /*Styling of the About webpage*/
 
-.aboutText {
-    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
-    color:white;
+.aboutGrid {  display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 10px;
+    grid-auto-flow: row;
+    width: 100%;
+    height: 100vh;
+    grid-template-areas:
+        "encabezado"
+        "titulo"
+        "foto1"
+        "texto1"
+        "texto2"
+        "foto2"
+        "footer";
+}
+.encabezado { grid-area: encabezado; }
+.titulo { grid-area: titulo; }
+.foto1 { grid-area: foto1; }
+.texto1 { grid-area: texto1; }
+.texto2 { grid-area: texto2; }
+.foto2 { grid-area: foto2; }
+.footer { grid-area: footer; }
+
+
+.texto1, .texto2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    max-height: 100%;
+    width: 100%;
+    padding: 10px;
+    p {
+        font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
+        max-width: 90vw;
+        font-size: clamp(0.8rem, 2vw, 1.6rem);
+        color:white;
+        padding: 20px;
+        margin: 10px;
+        text-align: center;
+        box-sizing: border-box;
+        overflow-wrap: break-word;
+        word-break: break-word;
+    }
+    
+}
+
+.foto1, .foto2 {
+    transition: 2s ease;
+    width: 100%;
+    &:hover {
+        transform: scale(1.2);
+    }
+}
+
+
+@media (max-width: 900px) {
+    .foto1, .foto2 {
+        display: flex;
+        width: auto;
+        max-width: 90vw;
+        align-self: center;
+    }
+    .texto1, .texto2 {
+        align-items: stretch;
+        width: 100%;
+        max-height: none;
+        padding: 10px;
+        flex-grow: 1;
+        flex-shrink: 0;
+        p {
+            width: 100%;
+            max-width: none;
+            font-size: clamp(0.3rem, 2vw, 1.6rem);
+            padding: 20px;
+            margin: 10px 0;
+            white-space: normal;
+        }
+    }
 }
