--- a/style/_program.scss
+++ b/style/_program.scss
@@ -1,5 +1,24 @@
 /*Styling of the Program webpage*/
 
+.programGrid {  display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "encabezado"
+        "programImage"
+        "programText"
+        "custom-table"
+        "footer";
+}
+.encabezado { grid-area: encabezado; }
+.programImage { grid-area: programImage; }
+.programText { grid-area: programText; }
+.custom-table { grid-area: custom-table; }
+.footer { grid-area: footer; }
+
+
 .programImage {
     display: flex;
     justify-content: center;
@@ -12,4 +31,26 @@
     text-align: center;
     width: 98%;
     margin: 5px;
+}
+
+
+.programImage {
+    transition: 2s ease;
+    width: 100%;
+    &:hover {
+        transform: scale(1.2);
+    }
+}
+
+.custom-table {
+    color: white;
+    caption {
+        text-align: center;
+        font-weight: bold;
+    }
+}
+
+.footer {
+    width: 100%;
+    align-self: center;
 }
