--- a/style/_videos.scss
+++ b/style/_videos.scss
@@ -1,13 +1,42 @@
 /*Styling of the Videos webpage*/
 
-.videosText{
+.videoGrid {  display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "encabezado"
+        "videoT1"
+        "video1"
+        "videoT2"
+        "video2"
+        "videoT3"
+        "video3"
+        "footer";
+}
+.encabezado { grid-area: encabezado; }
+.videoT1 { grid-area: videoT1; }
+.video1 { grid-area: video1; }
+.videoT2 { grid-area: videoT2; }
+.video2 { grid-area: video2; }
+.videoT3 { grid-area: videoT3; }
+.video3 { grid-area: video3; }
+.footer { grid-area: footer; }
+
+.videoT1, .videoT2, .videoT3{
     font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
     color:white;
     text-align: center;
 }
 
-.videos {
+.video1, .video2, .video3 {
     display: flex;
     justify-content: center;
     margin: 20px;
+}
+
+.footer {
+    width: 100%;
+    align-self: center;
 }
