--- a/style/style.scss
+++ b/style/style.scss
@@ -12,6 +12,12 @@ $naranja: #ffc107;
 
 /*Styling of the Main webpage*/
 
+.gridParent {
+    display: flex;
+    flex-direction: column;
+    min-height: 90vh;
+}
+
 .indexGrid {  display: grid;
     grid-template-columns: minmax(clamp(200px, 20vw, 1fr), 1fr);
     grid-template-rows: auto;
@@ -21,18 +27,18 @@ $naranja: #ffc107;
     "header header"
     "indexImagen titleContainer"
     "indexImagen texto1"
-    "texto2 texto2"
-    "footer footer"; 
+    "texto2 texto2";
     max-width: 90vw;
     margin: 20px;
     padding: 20px;
+    flex-grow: 1;
+    overflow-wrap: break-word;
 }
 .header { grid-area: header; }
 .indexImagen { grid-area: indexImagen; }
 .titleContainer { grid-area: titleContainer; }
 .texto1 { grid-area: texto1; }
 .texto2 { grid-area: texto2; }
-.footer { grid-area: footer; }
 
 .indexImagen {
     display: flex;
@@ -42,7 +48,7 @@ $naranja: #ffc107;
     align-items: center;
     img .scottyImg {
         width: auto;
-        max-width: 100%;        
+        max-width: 100%;
         max-height: 70vh;
         height: auto;
         margin: 10px;
@@ -51,11 +57,13 @@ $naranja: #ffc107;
 }
 
 .titleContainer {
+    display: flex;
+    justify-content: center;
     width: 100%;   
     height: auto;
     max-height: 20vh;
     padding: 5px 0;
-    margin: 0;
+    margin: 0;    
     .titulo {
         font-size: clamp(1.2rem, 2vw, 1.6rem);
         color: $rojo;
@@ -91,7 +99,7 @@ $naranja: #ffc107;
             width: 100%;    
             padding: 5px;
             line-height: 1.5;
-            font-size: clamp(1rem, 1.2vw, 1.1rem);
+            font-size: clamp(1.2rem, 1.2vw, 1.4rem);
             overflow-wrap: break-word;
             word-break: break-word;
             margin-bottom: 10px;
@@ -101,9 +109,11 @@ $naranja: #ffc107;
 }
 .texto2 {
     @extend .texto1;
-    font-size: clamp(1rem, 2vw, 1.2rem);
-    margin-bottom: 10px;
-    line-height: 1.5;    
+    p {
+        font-size: clamp(1rem, 1vw, 1rem);
+        margin-bottom: 10px;
+        line-height: 1.5;   
+    }
 }
 
 p a {
@@ -113,34 +123,40 @@ p a:hover {
     color: #dc3545;
 }
 
+.footer {
+    align-self: end;
+    bottom: 0;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    margin-top: auto;
+}
+
 /*Media Queries*/
 
 @media (max-width: 900px) {
+    .gridParent {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
     .indexGrid {
         grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr auto;
+        grid-template-rows: auto;
         gap: 10px;
         width: 100%;
-        height: 100vh;
         grid-template-areas:
             "header"
             "titleContainer"
             "indexImagen"
             "texto1"
             "texto2"
-            "footer";
     }
     .header { grid-area: header; }
     .indexImagen { grid-area: indexImagen; }
     .texto1 { grid-area: texto1; }
     .texto2 { grid-area: texto2; }
-    .footer { 
-        grid-area: footer;
-        align-self: end; 
-        padding: 10px;
-        text-align: center;
-        width: 100%;
-    }
     .titleContainer {
         display: flex;
         justify-content: center;
@@ -149,7 +165,7 @@ p a:hover {
         .titulo {
             text-align: center;
             max-width: 100%;
-            font-size: clamp(1.2rem, 2vw, 1.6rem);
+            font-size: clamp(1.1rem, 2vw, 1.4rem);
             margin: 0;
         }
     }
@@ -157,8 +173,8 @@ p a:hover {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 100%; 
-        max-height: 90vh;
+        width: 100%;
+        min-height: 70vh;
         padding: 20px;
         box-sizing: border-box;
         flex-grow: 1;
@@ -167,7 +183,7 @@ p a:hover {
             p {
                 overflow-wrap: break-word;
                 word-break: break-word;
-                font-size: clamp(1rem, 1.2vw, 1.1rem);
+                font-size: clamp(0.8rem, 1.2vw, 1.2rem);
                 margin-bottom: 10px;
                 line-height: 1.5;
             }
@@ -175,7 +191,15 @@ p a:hover {
     }
 
     .indexImagen {
-        max-width: 100%;
+        max-width: 60%;
+    }
+    .footer {
+        align-self: end;
+        bottom: 0;
+        padding: 10px;
+        text-align: center;
+        width: 100%;
+        margin-top: auto;
     }
 }
 
@@ -191,7 +215,6 @@ p a:hover {
             "indexImagen"
             "texto1"
             "texto2"
-            "footer";
     }    
     .texto1, .texto2 {
         display: flex;
@@ -204,10 +227,12 @@ p a:hover {
         max-width: 100%;
     }
     .footer {
-        align-self: flex-end;
+        align-self: end;
+        bottom: 0;
         padding: 10px;
         text-align: center;
         width: 100%;
+        margin-top: auto;
     }
 }
 
