--- a/style/style.css
+++ b/style/style.css
@@ -13,10 +13,27 @@ body {
   height: 100%;
 }
 
-h1 {
+.header .headerImage img {
+  max-width: 100%;
+  height: auto;
+}
+.header h1 {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: clamp(3rem, 8vw, 10rem);
+  margin-top: 2rem;
   color: white;
   text-align: center;
+  flex-wrap: wrap;
+  height: auto;
+}
+.header h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-style: italic;
+  font-size: clamp(2.5rem, 6vw, 8rem);
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
   flex-wrap: wrap;
 }
 
@@ -24,6 +41,24 @@ h1 {
   width: 80%;
   margin: 0 auto;
   background-color: #030104;
+}
+.naviBar nav button {
+  background-color: #030104;
+  border-color: #ffc107;
+}
+.naviBar nav #navbarContent a {
+  font-size: clamp(2rem, 2vw, 6rem);
+}
+.naviBar nav .navbar-nav {
+  flex-wrap: wrap;
+}
+.naviBar nav .navbar-nav .nav-link {
+  color: #ffc107;
+  transition: all 0.5s ease;
+}
+.naviBar nav .navbar-nav .nav-link:hover {
+  color: #dc3545;
+  transform: scale(1.2);
 }
 
 .navbar-toggler {
@@ -35,39 +70,31 @@ h1 {
 
 .headerImage {
   width: auto;
-  max-width: 500px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
-
 .headerImage img {
   width: 100%;
   height: auto;
 }
 
-.navbar-nav {
-  flex-wrap: wrap;
-}
-
-.navbar-nav .nav-link {
-  color: #ffc107;
-  transition: transform 0.3s ease, color 0.3s ease;
-}
-
-.navbar-nav .nav-link:hover {
-  color: #dc3545;
-  transform: scale(1.2);
-}
-
 .footer {
-  display: inline-block;
-  height: 2.5rem;
-  width: 80%;
-  color: #0d6efd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
   text-align: center;
-  transition: color 1s ease;
+  margin-top: auto;
 }
-
+.footer a {
+  color: #0d6efd;
+  font-size: clamp(1rem, 2vw, 4rem);
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.5s ease;
+}
 .footer a:hover {
+  transform: scale(1.2);
   color: #dc3545;
 }
 
@@ -95,7 +122,7 @@ h1 {
   grid-area: foto1;
 }
 
-.texto1, .texto2 {
+.texto1 {
   grid-area: texto1;
 }
 
@@ -372,229 +399,147 @@ h1 {
 }
 
 /*Styling of the Main webpage*/
-.gridParent {
-  display: flex;
-  flex-direction: column;
-  min-height: 90vh;
-}
-
 .indexGrid {
   display: grid;
-  grid-template-columns: minmax(clamp(200px, 20vw, 1fr), 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: auto;
+  grid-auto-rows: auto;
   gap: 5px;
-  grid-auto-flow: row;
-  grid-template-areas: "header header" "indexImagen titleContainer" "indexImagen texto1" "texto2 texto2";
-  max-width: 90vw;
   margin: 20px;
   padding: 20px;
-  flex-grow: 1;
   overflow-wrap: break-word;
+  grid-template-areas: "header" "mainGrid" "texto2" "footer";
 }
 
 .header {
   grid-area: header;
 }
 
-.indexImagen {
+.mainGrid {
+  grid-area: mainGrid;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-auto-rows: auto;
+  gap: 10px;
+  margin: 20px;
+  padding: 50px;
+  grid-template-areas: "indexImagen titleContainer" "indexImagen texto1";
+}
+.mainGrid .indexImagen {
   grid-area: indexImagen;
+  position: sticky;
+  align-self: start;
+  top: 20px;
 }
-
-.titleContainer {
-  grid-area: titleContainer;
-}
-
-.texto1, .texto2 {
-  grid-area: texto1;
-}
-
-.texto2 {
-  grid-area: texto2;
-}
-
-.indexImagen {
-  display: flex;
-  width: 100%;
-  max-width: 50vw;
-  justify-content: center;
-  align-items: center;
-}
-.indexImagen img .scottyImg {
-  width: auto;
+.mainGrid .indexImagen img {
   max-width: 100%;
-  max-height: 70vh;
   height: auto;
-  margin: 10px;
-  object-fit: contain;
 }
-
-.titleContainer {
-  display: flex;
+.mainGrid .titleContainer {
+  grid-area: titleContainer;
   justify-content: center;
-  width: 100%;
-  height: auto;
-  max-height: 20vh;
-  padding: 5px 0;
-  margin: 0;
 }
-.titleContainer .titulo {
-  font-size: clamp(1.2rem, 2vw, 1.6rem);
+.mainGrid .titleContainer p {
+  font-weight: bold;
   color: #dc3545;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-size: clamp(1.2rem, 2vw, 6rem);
   height: 100%;
   text-align: center;
-  max-width: 60%;
-  white-space: normal;
-  margin: 0;
 }
-
-.texto1, .texto2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  height: auto;
-  max-height: 90vh;
-  margin-top: 0;
-  margin-bottom: 10px;
-  line-height: 1.5;
-  width: 100%;
-  padding: 10px 0;
-  box-sizing: border-box;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 70%;
+.mainGrid .texto1 {
+  grid-area: texto1;
+  overflow: visible;
 }
-.texto1 .textContainer, .texto2 .textContainer {
-  width: 100%;
-  height: auto;
-}
-.texto1 .textContainer p, .texto2 .textContainer p {
+.mainGrid .texto1 .textContainer p {
   font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
   color: white;
   width: 100%;
   padding: 5px;
-  line-height: 1.5;
-  font-size: clamp(1.2rem, 1.2vw, 1.4rem);
-  overflow-wrap: break-word;
-  word-break: break-word;
+  line-height: 2;
+  font-size: clamp(0.4rem, 2vw, 4rem);
   margin-bottom: 10px;
-  margin: 5px 0;
 }
 
+.texto2 {
+  grid-area: texto2;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  overflow: visible;
+}
 .texto2 p {
-  font-size: clamp(1rem, 1vw, 1rem);
-  margin-bottom: 10px;
-  line-height: 1.5;
+  color: white;
+  font-size: clamp(1rem, 2vw, 4rem);
+  margin: 40px 40px;
 }
-
-p a {
-  transition: color 0.3s ease;
+.texto2 p a {
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.5s ease;
 }
-
-p a:hover {
+.texto2 p a:hover {
   color: #dc3545;
 }
 
 .footer {
-  align-self: end;
-  bottom: 0;
-  padding: 10px;
-  text-align: center;
-  width: 100%;
-  margin-top: auto;
+  grid-area: footer;
 }
 
-/*Media Queries*/
+/*Media Queries - A mejorar font sizes, page width/centering issues*/
 @media (max-width: 900px) {
-  .gridParent {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  body {
+    width: 100%;
+    max-width: 100vw;
   }
   .indexGrid {
+    margin: 0 10px;
+  }
+  .mainGrid {
+    grid-area: mainGrid;
+    display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: auto auto auto;
+    grid-auto-columns: auto;
     gap: 10px;
-    width: 100%;
-    grid-template-areas: "header" "titleContainer" "indexImagen" "texto1" "texto2";
+    margin: 20px;
+    padding: 30px;
+    grid-template-areas: "indexImagen" "titleContainer" "texto1";
   }
-  .header {
-    grid-area: header;
-  }
-  .indexImagen {
+  .mainGrid .indexImagen {
     grid-area: indexImagen;
+    position: static;
   }
-  .texto1, .texto2 {
-    grid-area: texto1;
-  }
-  .texto2 {
-    grid-area: texto2;
-  }
-  .titleContainer {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding: 10px 0;
-  }
-  .titleContainer .titulo {
-    text-align: center;
+  .mainGrid .indexImagen img {
     max-width: 100%;
-    font-size: clamp(1.1rem, 2vw, 1.4rem);
-    margin: 0;
-  }
-  .texto1, .texto2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 100%;
-    min-height: 70vh;
-    padding: 20px;
-    box-sizing: border-box;
-    flex-grow: 1;
-    overflow-y: auto;
-  }
-  .texto1 .textContainer p, .texto2 .textContainer p {
-    overflow-wrap: break-word;
-    word-break: break-word;
-    font-size: clamp(0.8rem, 1.2vw, 1.2rem);
-    margin-bottom: 10px;
-    line-height: 1.5;
-  }
-  .indexImagen {
-    max-width: 60%;
-  }
-  .footer {
-    align-self: end;
-    bottom: 0;
-    padding: 10px;
-    text-align: center;
-    width: 100%;
-    margin-top: auto;
-  }
-}
-@media (max-width: 800px) {
-  .indexGrid {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
     height: auto;
-    grid-template-areas: "header" "titleContainer" "indexImagen" "texto1" "texto2";
+    object-fit: cover;
   }
-  .texto1, .texto2 {
-    display: flex;
-    width: 100%;
-    padding: 20px;
-    max-height: 90vh;
-    overflow-y: auto;
+  .mainGrid .titleContainer {
+    grid-area: titleContainer;
+    justify-content: center;
   }
-  .indexImagen {
-    max-width: 100%;
-  }
-  .footer {
-    align-self: end;
-    bottom: 0;
-    padding: 10px;
+  .mainGrid .titleContainer p {
+    font-weight: bold;
+    color: #dc3545;
+    font-weight: bold;
+    font-size: clamp(1.2rem, 4vw, 3.5rem);
     text-align: center;
+  }
+  .mainGrid .texto1 {
+    grid-area: texto1;
+    overflow: visible;
+  }
+  .mainGrid .texto1 .textContainer p {
+    font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
+    color: white;
     width: 100%;
-    margin-top: auto;
+    padding: 5px;
+    line-height: 1.5;
+    font-size: clamp(1rem, 2vw, 1.6rem);
+    margin-bottom: 10px;
   }
 }
 
