--- a/style/style.css
+++ b/style/style.css
@@ -28,7 +28,7 @@ body {
 }
 .header h2 {
   font-family: Arial, Helvetica, sans-serif;
-  color: white;
+  color: #dc3545;
   font-style: italic;
   font-size: clamp(2.5rem, 6vw, 8rem);
   text-align: center;
@@ -77,6 +77,14 @@ body {
   height: auto;
 }
 
+hr {
+  width: 80%;
+  height: 2px;
+  background: linear-gradient(to left, #ffc107, #dc3545);
+  margin: 40px auto;
+  border: none;
+}
+
 .footer {
   display: flex;
   justify-content: center;
@@ -102,93 +110,120 @@ body {
 .aboutGrid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  gap: 10px;
-  grid-auto-flow: row;
+  grid-template-rows: auto auto auto auto auto auto 1fr auto 1fr auto auto;
+  gap: 20px;
   width: 100%;
-  height: 100vh;
-  grid-template-areas: "encabezado" "titulo" "foto1" "texto1" "texto2" "foto2" "footer";
+  min-height: 100vh;
+  grid-template-areas: "header" "hr1" "aboutTitle" "hr2" "aboutFoto1" "hr3" "aboutTexto1" "hr4" "aboutTexto2" "hr5" "aboutFoto2" "hr6" "footer";
 }
 
-.encabezado {
-  grid-area: encabezado;
+.header {
+  grid-area: header;
 }
 
-.titulo {
-  grid-area: titulo;
+.hr1 {
+  grid-area: hr1;
 }
 
-.foto1 {
-  grid-area: foto1;
+.aboutTitle {
+  grid-area: aboutTitle;
+}
+.aboutTitle p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: clamp(2rem, 4vw, 10rem);
+  margin-top: 2rem;
+  color: #ffc107;
+  text-align: center;
+  flex-wrap: wrap;
+  height: auto;
 }
 
-.texto1 {
-  grid-area: texto1;
+.hr2 {
+  grid-area: hr2;
 }
 
-.texto2 {
-  grid-area: texto2;
+.aboutFoto1, .aboutFoto2 {
+  grid-area: aboutFoto1;
+  transition: 2s ease;
+  width: 100%;
+}
+.aboutFoto1:hover, .aboutFoto2:hover {
+  transform: scale(1.2);
 }
 
-.foto2 {
-  grid-area: foto2;
+.hr3 {
+  grid-area: hr3;
+}
+
+.aboutTexto1, .aboutTexto2 {
+  grid-area: aboutTexto1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+}
+.aboutTexto1 p, .aboutTexto2 p {
+  font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
+  max-width: 90vw;
+  font-size: clamp(1.5rem, 5vh, 6rem);
+  color: white;
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+.aboutTexto1 span, .aboutTexto2 span {
+  color: #ffc107;
+  font-weight: bold;
+}
+
+.hr4 {
+  grid-area: hr4;
+}
+
+.aboutTexto2 {
+  grid-area: aboutTexto2;
+}
+
+.hr5 {
+  grid-area: hr5;
+}
+
+.aboutFoto2 {
+  grid-area: aboutFoto2;
+}
+
+.hr6 {
+  grid-area: hr6;
 }
 
 .footer {
   grid-area: footer;
 }
 
-.texto1, .texto2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-  max-height: 100%;
-  width: 100%;
-  padding: 10px;
-}
-.texto1 p, .texto2 p {
-  font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
-  max-width: 90vw;
-  font-size: clamp(0.8rem, 2vw, 1.6rem);
-  color: white;
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  box-sizing: border-box;
-  overflow-wrap: break-word;
-  word-break: break-word;
-}
-
-.foto1, .foto2 {
-  transition: 2s ease;
-  width: 100%;
-}
-.foto1:hover, .foto2:hover {
-  transform: scale(1.2);
-}
-
 @media (max-width: 900px) {
-  .foto1, .foto2 {
+  .aboutFoto1, .aboutFoto2 {
     display: flex;
     width: auto;
+    height: auto;
     max-width: 90vw;
     align-self: center;
   }
   .texto1, .texto2 {
-    align-items: stretch;
+    align-items: center;
     width: 100%;
     max-height: none;
-    padding: 10px;
+    padding: 20px;
     flex-grow: 1;
-    flex-shrink: 0;
   }
   .texto1 p, .texto2 p {
     width: 100%;
-    max-width: none;
-    font-size: clamp(0.3rem, 2vw, 1.6rem);
+    text-align: center;
+    font-size: clamp(1rem, 2vh, 4rem);
     padding: 20px;
-    margin: 10px 0;
     white-space: normal;
   }
 }
@@ -408,11 +443,15 @@ body {
   margin: 20px;
   padding: 20px;
   overflow-wrap: break-word;
-  grid-template-areas: "header" "mainGrid" "texto2" "footer";
+  grid-template-areas: "header" "hr1" "mainGrid" "hr2" "indexTexto2" "hr3" "footer";
 }
 
 .header {
   grid-area: header;
+}
+
+.hr1 {
+  grid-area: hr1;
 }
 
 .mainGrid {
@@ -424,7 +463,7 @@ body {
   gap: 10px;
   margin: 20px;
   padding: 50px;
-  grid-template-areas: "indexImagen titleContainer" "indexImagen texto1";
+  grid-template-areas: "indexImagen titleContainer" "indexImagen indexTexto1";
 }
 .mainGrid .indexImagen {
   grid-area: indexImagen;
@@ -449,11 +488,11 @@ body {
   height: 100%;
   text-align: center;
 }
-.mainGrid .texto1 {
-  grid-area: texto1;
+.mainGrid .indexTexto1 {
+  grid-area: indexTexto1;
   overflow: visible;
 }
-.mainGrid .texto1 .textContainer p {
+.mainGrid .indexTexto1 .textContainer p {
   font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
   color: white;
   width: 100%;
@@ -463,36 +502,45 @@ body {
   margin-bottom: 10px;
 }
 
-.texto2 {
-  grid-area: texto2;
+.hr2 {
+  grid-area: hr2;
+}
+
+.indexTexto2 {
+  grid-area: indexTexto2;
   display: flex;
   flex-direction: column;
   height: auto;
   overflow: visible;
 }
-.texto2 p {
+.indexTexto2 p {
   color: white;
   font-size: clamp(1rem, 2vw, 4rem);
   margin: 40px 40px;
 }
-.texto2 p a {
+.indexTexto2 p a {
   text-decoration: none;
   display: inline-block;
   transition: all 0.5s ease;
 }
-.texto2 p a:hover {
+.indexTexto2 p a:hover {
   color: #dc3545;
+}
+
+.hr3 {
+  grid-area: hr3;
 }
 
 .footer {
   grid-area: footer;
 }
 
-/*Media Queries - A mejorar font sizes, page width/centering issues*/
+/*Media Queries - A mejorar: font sizes, page width/centering issues*/
 @media (max-width: 900px) {
   body {
     width: 100%;
-    max-width: 100vw;
+    max-width: 90vw;
+    align-items: center;
   }
   .indexGrid {
     margin: 0 10px;
@@ -506,7 +554,7 @@ body {
     gap: 10px;
     margin: 20px;
     padding: 30px;
-    grid-template-areas: "indexImagen" "titleContainer" "texto1";
+    grid-template-areas: "indexImagen" "titleContainer" "indexTexto1";
   }
   .mainGrid .indexImagen {
     grid-area: indexImagen;
@@ -528,11 +576,11 @@ body {
     font-size: clamp(1.2rem, 4vw, 3.5rem);
     text-align: center;
   }
-  .mainGrid .texto1 {
-    grid-area: texto1;
+  .mainGrid .indexTexto1 {
+    grid-area: indexTexto1;
     overflow: visible;
   }
-  .mainGrid .texto1 .textContainer p {
+  .mainGrid .indexTexto1 .textContainer p {
     font-family: Arial, "Arial Unicode MS", Helvetica, Sans-Serif;
     color: white;
     width: 100%;
