--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #030104;
   width: minmax(600px, 1000px);
